# CruiseRobot

./: .gitignore  README.md  工作计划10-18第一版.md
camera_cpp/: CMakeLists.txt  Makefile  led_control.cpp  main.cpp  user
camera_cpp/include/: Open Source Software Licenses.txt  VideoHandle.h  sio_gpio.h
camera_cpp/old_source/: cmd.cpp  decode_video.cpp  decode_video_infrared.cpp  main_local.cpp  transform_video.cpp  transform_video_infrared.cpp  video_red_oldest.cpp
camera_cpp/src/: awaken_offline_sample.c  decode_video_all.cpp  lib_video_handle.cpp  trans_video_all.cpp
new_camera/: CMakeLists.txt
new_camera/include/hc/: DecodeCardSdk.h  HCNetSDK.h
new_camera/include/robot_background/: base_func.hpp  hc_camera.hpp  network_hc_camera.hpp
new_camera/src/: camera_message_node.cpp
new_camera/src/base_libs/: base_func.cpp  hc_camera.cpp  network_hc_camera.cpp
robot_background/: audio_recognize.py  client_socket.py  exam_safe.py  handle_awake.py  iat_ws_python3.py  play_voice.py  play_voice.spec  question_param.json  robot.sh  robot_message_trans.py  robot_message_trans.spec  test_code.py  video_trans  video_trans_nointer  warn_thread_class.py  web_socket.py
robot_background/gs_robot/: cmd.py  data.py  general_function.py  real_time_data.py  robot_api.py  robot_thread_class.py
robot_background/msc/: ivw_local.logcache
robot_background/msc/res/ivw/: wakeupresource.jet
server/: server _21_9_28.py  server_11-8.py  server_6-15.py  server_6-30.py  server_soft_server.py  test_server.py  test_server_soft .py
ui_background/: Ui_display.py  record.json  robot_map_datas.json  task_queue _fac.json  task_queue.json
ui_background/src/: Ui_display.py  callback.py  error_dialog.py  handle.py  main_window.py  map_dialog.py  mylabel.py  navigate_dialog.py  position_dialog.py  robot_api.py  test.py  thread_class.py  thread_class_old.py  video_decode  video_decode_nointer  voice_test.py  使用文档.txt  指令记载.json
ui_background/test/: Ui_display.py
ui_background2/: display.ui  robot_map_datas.json  task_queue.json
ui_background2/src/: callback.py  main_window.py  robot_api.py  test.py  接口说明.txt
ui_background2/test/: server_test.py
语音识别/: robot_map_datas.json  rtasr_python3_demo.py
